--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ nav {
     opacity: 0.6;
 }
 
+.my-account:active {
+    opacity: 0.4;
+}
+
 .ask-for-yours {
     padding: 10px 20px;
     background-color: #039a87;
@@ -75,6 +79,10 @@ nav {
 
 .ask-for-yours:hover {
     opacity: 0.6;
+}
+
+.ask-for-yours:active {
+    opacity: 0.4;
 }
 
 .container-up {
@@ -145,4 +153,234 @@ nav {
 
 .submit-menssage-two:hover {
     opacity: 0.6;
+}
+
+.submit-menssage-two:active {
+    opacity: 0.4;
+}
+
+.container-mid {
+    display: flex;
+    height: 100vh;
+}
+
+.section-mid-one {
+    background-color: #f2f2f2;
+    width: 50%;
+}
+
+.article-mid-one {
+    padding: 80px 55px 0 55px;
+}
+
+.article-mid-one h3 {
+    color: #039a87;
+    font-size: 30px;
+    margin-bottom: 40px;
+    font-weight: 900;
+}
+
+.cards-article-mid {
+    display: flex;
+    padding: 20px 25px;
+    margin-top: 20px;
+    background-color: #fff;
+    text-align: center;
+    cursor: pointer;
+
+    transition: 0.3s;
+}
+
+.cards-article-mid:hover {
+    box-shadow: 0px 0px 8px 5px rgba(0,0,0,0.56);
+}
+
+.cards-article-mid img {
+    padding: 25px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 40px;
+}
+
+.cards-content {
+    margin: 13px 0 0 25px;
+    text-align: justify;
+}
+
+
+
+.cards-content p {
+    margin-bottom: 5px;
+    font-size: 17px;
+    color: #000;
+    font-weight: 500;
+}
+
+.cards-content spam {
+    color: #039a87;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.andress {
+    font-size: 14px;
+    margin-top: 60px;
+    font-weight: 600;
+}
+
+.section-mid-two {
+    width: 50%;
+    background-color: #039A87;
+    color: #fff;
+}
+
+.section-mid-two article {
+    padding: 70px 70px  0 70px;
+}
+
+.form h3 {
+    color: #FFF;
+    font-size: 30px;
+    margin-bottom: 35px;
+    font-weight: 900;
+}
+
+.form input {
+    display: block;
+    padding: 12px;
+    width: 100%;
+    margin-bottom: 11px;
+    outline: none;
+    border: none;
+}
+
+.form input::placeholder {
+    color: #000;
+    font-weight: 500;
+}
+
+.form textarea {
+    padding: 15px;
+    margin-bottom: 40px;
+    color: #000;
+    font-weight: 500;
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 100px;
+}
+
+.form button {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    background-color: #001B22;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.form button:hover {
+    opacity: 0.6;
+}
+
+.form button:active {
+    opacity: 0.4;
+}
+
+.container-down {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #001B22;
+    height: 40vh;
+}
+
+.section-container-down {
+    display: flex;
+}
+
+.social-links-1 {
+    margin-right: 100px;
+}
+
+.img {
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    margin-right: 15px;
+    border: 1px solid #256564;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+
+    transition: 0.3s;
+}
+
+.img:hover {
+    transform: translateY(-8px);
+}
+
+.img-link {
+    outline: none;
+    text-decoration: none;
+}
+
+.bx {
+    width: 150px;
+    margin-right: 5px;
+}
+
+.bx-1 {
+    width: 150px;
+    border-radius: 6px;
+    padding: 12px 8px;
+    background-color: white;
+}
+
+.social-links-1 p {
+    color: #FFF;
+    margin: 30px 0 10px 0;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.social-links-2 {
+    display: flex;
+}
+
+.paragraph {
+    display: flex;
+    flex-direction: column;
+    margin-right: 70px;
+}
+
+.link-paragraph {
+    text-decoration: none;
+    color: white;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+.link-paragraph:hover {
+    opacity: 0.6;
+}
+
+.link-paragraph:active {
+    opacity: 0.4;
+}
+
+footer {
+    height: 12vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.p-footer {
+    color: #7f7878;
+    font-size: 14px;
+    font-weight: 500;
 }
