--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -312,48 +312,48 @@ nav {
 
 /* START FOOTER */
 
+footer a {
+    text-decoration: none;
+    outline: none;
+}
+
 .container-down {
-    display: flex;  
+    display: flex;
+    justify-content: center;
     background-color: #001B22;
 }
 
 .section-container-down {
     display: flex;
-    padding: 50px 160px;
+    padding: 50px 0;
 }
 
 .social-links-1 {
-    margin-right: 100px;
+    margin-right: 80px;
 }
 
-.img {
-    width: 40px;
-    height: 40px;
+.social-link {
+    font-size: 26px;
     padding: 10px;
-    margin-right: 15px;
     border: 1px solid #256564;
     border-radius: 4px;
-    color: white;
-    cursor: pointer;
+    color: #fff;
+    width: auto;
+    margin-right: 10px;
 
-    transition: 0.3s ease-out;
+    transition: 0.3s;
 }
 
-.img:hover {
+.social-link:hover {
     transform: translateY(-8px);
 }
 
-.img-link {
-    outline: none;
-    text-decoration: none;
-}
-
-.bx {
+.bx-1 {
     width: 150px;
     margin-right: 5px;
 }
 
-.bx-1 {
+.bx-2 {
     width: 150px;
     border-radius: 6px;
     padding: 12px 8px;
