--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -333,31 +333,31 @@ footer a {
 }
 
 .social-link {
-    font-size: 26px;
-    padding: 10px;
-    border: 1px solid #256564;
-    border-radius: 4px;
-    color: #fff;
-    width: auto;
-    margin-right: 10px;
+    font-size: 26px!important;
+    padding: 10px!important;
+    border: 1px solid #256564!important;
+    border-radius: 4px!important;
+    color: #fff!important;
+    width: auto!important;
+    margin-right: 10px!important;
 
-    transition: 0.3s;
+    transition: 0.3s!important;
 }
 
 .social-link:hover {
-    transform: translateY(-8px);
+    transform: translateY(-8px)!important;
 }
 
 .bx-1 {
-    width: 150px;
-    margin-right: 5px;
+    width: 150px!important;
+    margin-right: 5px!important;
 }
 
 .bx-2 {
-    width: 150px;
-    border-radius: 6px;
-    padding: 12px 8px;
-    background-color: white;
+    width: 150px!important;
+    border-radius: 6px!important;
+    padding: 12px 8px!important;
+    background-color: white!important;
 }
 
 .social-links-1 p {
