--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -32,7 +32,7 @@ nav {
 .navlist {
     display: flex;
     list-style: none;
-    margin: 10px 0 0 50px;
+    margin: 15px 0 0 50px;
 }
 
 .navlist li {
@@ -415,6 +415,17 @@ footer a {
 
 
 /* MOBILE */
+
+@media(max-width:1300px) {
+    .navlist {
+        margin: 8px 0 0 50px;
+    }
+
+    .ask-for-yours {
+        text-align: center;
+    }
+}
+
 
 @media(max-width: 1100px) {
     /* HEADER  */
