--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -288,6 +288,11 @@ nav {
     height: 100px;
 }
 
+.form textarea::placeholder {
+    color: #000;
+    font-weight: 500;
+}
+
 .form button {
     width: 100%;
     height: 50px;
